--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '7.x' # Specify the .NET SDK version you are using
+    version: '8.x' # Specify the .NET SDK version you need
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - script: |
